@@ -58,7 +58,7 @@
                 <a href="#" onclick="chooseFile('#exportFileDialog', saveData); return false;">
                   <span class="glyphicon glyphicon-floppy-save menu-icon"></span> Export Data
                 </a>
-                <input style="display:none;" id="exportFileDialog" type="file" nwsaveas="procpath.export" />
+                <input style="display:none;" id="exportFileDialog" type="file" nwsaveas="procpath.export" disabled />
               </li>
             </ul>
           </li>
